syntax = "proto3";
option java_multiple_files = true;
package com.huytran.grpcdemo.generatedproto;

message SignUpRequest {
    string name = 1;
    string password = 2;
}

message SignUpResponse {
    int32 result_code = 1;
    string token = 2;
}

message LoginRequest {
    string name = 1;
    string password = 2;
}

message LoginResponse {
    int32 result_code = 1;
    string token = 2;
}

message GetInfoRequest {

}

message GetInfoResponse {
    int32 result_code = 1;
    string name = 2;
    string userName = 3;
    int64 avatarId = 4;
    string phoneNumber = 5;
    string idCard = 6;
    int64 tsCardDated = 7;
    int64 tsDateOfBirth = 8;
    int64 id = 9;
}

message LogoutRequest {

}

message LogoutResponse {

}

message LoginWithTokenRequest {

}

message LoginWithTokenResponse {
    int32 result_code = 1;
}

service UserService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc LoginWithToken(LoginWithTokenRequest) returns (LoginWithTokenResponse) {}
}